# otus_cpp_2020_09

./: .travis.yml  README.md  descriptor.json  doxygen.conf
HW1/: CMakeLists.txt  test_version.cpp
HW1/ip_filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  lib.cpp  lib.h  main.cpp  test_split.cpp
HW1/ip_filter/src/: lib.cpp  main.cpp
HW1/ip_filter/src/include/: lib.h
HW1/ip_filter/test/: test_check_ip.cpp  test_sort.cpp  test_split.cpp
HW1/test/: test_version.cpp
HW1/version/: CMakeLists.txt  main.cpp  test_version.cpp
HW1/version/src/: lib.cpp  main.cpp
HW1/version/test/: test_version.cpp
HW2/: CMakeLists.txt  allocator.cpp  auto_examples_1.cpp  auto_examples_2.cpp  lambda_examples.cpp  program.cpp  tuple_examples_1.cpp  vector.cpp
HW2/timus/: problem_1264.cpp  problem_1409.cpp  problem_1787.cpp  problem_1877.cpp  problem_2001.cpp
HW3/: CMakeLists.txt  main.cpp  print_ip.cpp
HW3/timus/: CMakeLists.txt  problem_1001.cpp  problem_1197.cpp  problem_1293.cpp  problem_1639.cpp  problem_1785.cpp  problem_1880.cpp  problem_2012.cpp  problem_2066.cpp  problem_2100.cpp
