cmake_minimum_required(VERSION 3.15)

project(HW3_timus)

add_executable(problem_1001 problem_1001.cpp)
add_executable(problem_1000 problem_1000.cpp)
add_executable(problem_1293 problem_1293.cpp)
add_executable(problem_1785 problem_1785.cpp)
add_executable(problem_2012 problem_2012.cpp)
add_executable(problem_1820 problem_1820.cpp)
add_executable(problem_2066 problem_2066.cpp)
add_executable(problem_1197 problem_1197.cpp)
add_executable(problem_2100 problem_2100.cpp)
